--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap&_v=20230214221812"
       rel="stylesheet">
    <link rel="stylesheet" href="css/style.min.css?_v=20230214221812">
-   <title>Валка деревьев в Санкт-Петербурге и Ленобласти частями по выгодной цене</title>
+   <title>Модульные дома в Перми</title>
 <meta name="description"
-   content=" Профессиональная валка деревьев в СПб и Ленобласти частями и целиком. Тел.: +7 (911) 962-64-74. Оценим стоимость валки дерева по фотографии.">
+   content="Модульные дома в Перми">
 
 </head>
 
